Rename package organization name to kkgroup

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kk/validation",
+    "name": "kkgroup/validation",
     "type": "library",
     "license": "MIT",
     "keywords": [
