--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: PHPUnit
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 env:
   SWOOLE_VERSION: '4.8.0'
@@ -12,10 +12,10 @@ jobs:
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        php-version: ['8.0']
-        engine: ['swoole', 'swow']
-      max-parallel: 5
+        os: [ ubuntu-latest ]
+        php-version: [ '8.0', '8.1', '8.2', '8.3' ]
+        engine: [ 'swoole', 'swow' ]
+      max-parallel: 8
     steps:
       - name: Checkout
         uses: actions/checkout@v2
