--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           composer test
   swoole-ci:
-    name: Test PHP ${{ matrix.php-version }} on ${{ matrix.engine }}
+    name: Test PHP ${{ matrix.php-version }} on Swoole
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
