--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "hyperf/validation": "^3.0",
         "jchook/phpunit-assert-throws": "^1.0",
         "mockery/mockery": "^1.4",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -44,6 +45,7 @@
         }
     },
     "scripts": {
-        "test": "phpunit -c phpunit.xml --colors=always"
+        "test": "phpunit -c phpunit.xml --colors=always",
+        "cs-fix": "@php vendor/bin/php-cs-fixer fix $1"
     }
 }
